<resources>
    <string name="app_name">Trey Threads</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <!--Trey Threads-->
    <string name="treyThreads">Trey Threads</string>
    <string name="bNavHome">Home</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="contactDescStr">If you need help or would like to enquire about a product, please use the form below and we will get back to you as soon as we can.</string>

    <string name="cart_empty">Your Cart is Empty!</string>
    <string name="addToCart">Add To Cart!</string>
    <string name="help_message">Enter your message!</string>
    <string name="enter_email">Email</string>
    <string name="enter_name">Name</string>
    <string name="contact_us">Contact Us</string>
    <string name="send_button">Send</string>
    <string name="subject">Subject</string>
    <string name="accounts_coming_soon">Accounts Coming Soon!</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="about_statement">This app was created by Liam Gooch and published under Recursive Innovation Ltd. Any material in this application is owned by Trey Threads and its contracted partners unless stated otherwise.</string>

</resources>
